# megatron

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE  README.md  evgen.pl  genum.hpp  genum.hpp.in  genum.pl  genum.sh  megatron_config.h  megatron_config.h.in
apps/core-plugins/: CMakeLists.txt  core-modules.cpp
apps/server/: CMakeLists.txt  mainApp.cpp
apps/test/: CMakeLists.txt  mainTest.cpp
corelib/: AUTHCOOKIE_id.h  CHUNK_id.h  CLASS_id.h  CMakeLists.txt  CONTAINER.h  CapsId.h  DATA_id.h  DBH.cpp  DBH.h  DBHEvent.h  DB_POSTFIX.h  DB_id.h  EVENT_id.h  ErrorDispatcherHelper.h  GG.h  GlobalCookie_id.h  IConfigDB.h  IConfigObj.h  IGEOIP.h  IInstance.h  ILogger.h  IObjectProxy.h  IProgress.h  IRPC.h  ISSL.h  ITests.h  IThreadNameController.h  IUtils.h  Integer.cpp  Integer.h  JAVACOOKIE_id.h  REF.h  REF_nm.h  RSA_id.h  Rational.cpp  Rational.h  Real.h  SEQ_id.h  SERVICE_id.h  SHA1_id.h  (+132 more)
corelib/SQLiteCpp/: CMakeLists.txt  Column.cpp  Column.h  Database.cpp  Database.h  Statement.cpp  Statement.h  Transaction.h
corelib/test/: containers_test_service.cpp  main.cpp
corelib/tmp/: CircularBuffer.h  FileName.h  XORShiftRandom.cpp  XORShiftRandom.h  baseState.cpp  baseState.h  dbvar.h  dfsCaps.h
lib/SQLiteCpp/: Assertion.h  Backup.cpp  Backup.h  CMakeLists.txt  Column.cpp  Column.h  Database.cpp  Database.h  Exception.cpp  Exception.h  Statement.cpp  Statement.h  Transaction.cpp  Transaction.h  VariadicBind.h
main/: CInstance.cpp  CInstance.h  CMakeLists.txt  CUtils.cpp  CUtils.h  app.conf  configObj.cpp  configObj.h  iutils_decl.cpp  megatron.cpp  megatron.h  megatronClient.cpp  megatronClient.h  progressor.h  threadNameCtl.cpp  threadNameCtl.h  utils_local.h
modules/: CMakeLists.txt
modules/dfsCaps/: CMakeLists.txt  CapsAlgorithm.cpp  CapsAlgorithm.h  NetRec.h  NetTreeNode.h  NetTreeRoute.cpp  NetTreeRoute.h  app.conf  build_base.php  coord.php  coord.sql  createdb.php  dfsCaps.cpp  dfsCapsService.cpp  dfsCapsService.h  eventgen.sh  events_dfsCaps.hpp  sql  test.cpp  user.key  zdb4  zdb4.sqlite  zdb6  zdb_loc  zdb_megaproxy
modules/dfsReferrer/: CMakeLists.txt  app.conf  dfsReferrer.cpp  dfsReferrerService.cpp  dfsReferrerService.h  eventgen.sh  events_dfsReferrer.hpp  neighbours.cpp  neighbours.h  uplinkconnectionstate.cpp  uplinkconnectionstate.h  uriReferals.cpp  uriReferals.h  z
modules/errorDispatcher/: CMakeLists.txt  errorDispatcherService.cpp  errorDispatcherService.h  eventgen.sh  events_errorDispatcher.hpp
modules/geoip/: CMakeLists.txt  CapsGeoIP.cpp  CapsGeoIP.h  geoip.cpp  geoip_impl.cpp  geoip_impl.h  geoip_reg.cpp
modules/http/: CMakeLists.txt  eventgen.sh  events_http.hpp  http.cpp  httpService.cpp  httpService.h
modules/logger/: CMakeLists.txt  eventgen.sh  events_logger.hpp  logger.cpp  loggerService.cpp  loggerService.h
modules/mysql/: CMakeLists.txt  mysql.cpp  mysqlService.cpp  mysqlService.h
modules/objectProxy/: CMakeLists.txt  eventgen.sh  events_ObjectProxy.hpp  objectProxy.cpp  objectProxyService.cpp  objectProxyService.h
modules/oscar/: CMakeLists.txt  bufferVerify.h  eventgen.sh  events_oscar.hpp  oscar.cpp  oscarService.cpp  oscarService.h
modules/oscarSecure/: CMakeLists.txt  bufferVerify.h  eventgen.sh  events_OscarSecure.hpp  oscarSecure.cpp  oscarSecureService.cpp  oscarSecureService.h  oscarSecureUser.cpp  oscarSecureUser.h
modules/postgres/: postgres.cpp  postgresService.cpp  postgresService.h
modules/referrerClient/: CMakeLists.txt  eventgen.sh  events_referrerClient.hpp  referrerClient.cpp  referrerClientService.cpp  referrerClientService.h  uplinkconnectionstate_client.h
modules/rpc/: CMakeLists.txt  eventgen.sh  events_rpc.hpp  rpc.cpp  rpcService.cpp  rpcService.h  rpc_test.cpp  rpc_test_service.cpp  upnp_tr.c  upnp_tr.h
modules/socket/: CMakeLists.txt  eventgen.sh  events_socket.hpp  socket.cpp  socketService.cpp  socketService.h  socketStats.h  socketsContainerForSocketIO.cpp  socketsContainerForSocketIO.h
modules/sqlite/: CMakeLists.txt  sqlite.cpp  sqlite3.h  sqlite3ext.h  sqliteService.cpp  sqliteService.h
modules/ssl/: CMakeLists.txt  rsa-pub_512_1387663237.h  ssl.cpp  ssl_reg.cpp  st_rsa_impl.cpp  st_rsa_impl.h
modules/telnet/: CMakeLists.txt  eventgen.sh  events_telnet.hpp  telnet.cpp  telnet.h  telnetService.cpp  telnetService.h  telnet_keys.h
modules/timer/: CMakeLists.txt  eventgen.sh  events_timer.hpp  timer.cpp  timerService.cpp  timerService.h
modules/webHandler/: CMakeLists.txt  eventgen.sh  events_webHandler.hpp  webHandler.cpp  webHandlerService.cpp  webHandlerService.h
modules/webSocketClient/: CMakeLists.txt  eventgen.sh  events_webSocketClient.hpp  webSocketClient.cpp  webSocketClientService.cpp  webSocketClientService.h
modules/zsingle/: CMakeLists.txt
test/containers/: CMakeLists.txt  containers_test.cpp  containers_test_service.cpp
test/rpc/: CMakeLists.txt  mainTest.cpp  main_.cpp  rpcTestEvent.h  rpcTestService1.cpp  rpcTestService1.h  rpcTestService2.cpp  rpcTestService2.h  rpc_test_service.cpp  testRpcEvent.h
test/test_http/: CMakeLists.txt  ___testEvent.h  mainTestHTTP.cpp  testWebServerService.cpp
test/timer/: CMakeLists.txt  ___testEvent.h  mainTestTimer.cpp  main_.cpp  testTimerService.cpp  testTimerService.h
tools/: CMakeLists.txt  gen_invites.pl  randdd.cpp  run  showip.cpp  urlencode.cpp
tools/bin2c/: bin2c  bin2c.cpp  mime_types.cpp
tools/blockchain_utils/: commonError.h  keygen.cpp  pconfig.h  st_rsa_impl.cpp  st_rsa_impl.h
tools/classCreator/: classCreator.cpp
tools/crmak/: crmak-lib.cpp  crmak.cpp
tools/filterImage/: filterImage.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/ifacegen/: ifacegen.cpp
tools/ifacegen2/: b  crmak-lib.cpp  ifacegen2.cpp
tools/instructions_builder/: instructions_builder.cpp
tools/keygen/: dfsKeygen.cpp  dfsKeygen.h  dfsKeygenService.cpp  gen_rsa.cpp
tools/keylayout.mac/: phonetic-layout.keylayout
tools/loganal/: loganal.cpp  test_map.cpp
tools/rsa-keygen/: commonError.cpp  keygen.cpp  st_rsa_impl.cpp  st_rsa_impl.h
tools/scang/: get_symbol_name.c  ghash.h  scang  scang.cpp
(+356 files in other folders)
