#cmake_minimum_required (VERSION 2.6)

#project(dfsCore)



add_library(megatron-core STATIC
            DBH.cpp
            Integer.cpp
            Rational.cpp
            _QUERY.cpp
            __crc32.cpp
            __crc64.cpp
            __crc16.cpp
            _bitStream.cpp
            broadcaster.cpp
            commonError.cpp
            configDB.cpp
            epoll_socket_info.cpp
            event_mt.cpp
            eventDeque.cpp
            httpConnection.cpp
            ioBuffer.cpp
            js_utils.cpp
            jsonHandler.cpp
            listenerBase.cpp
            listenerBuffered.cpp
            listenerBuffered1Thread.cpp
            listenerPolled.cpp
            listenerSimple.cpp
            msockaddr_in.cpp
            mtimespec.cpp
            mutexInspector.cpp
            mutexable.cpp
            objectHandler.cpp
            route_t.cpp
	    networkMultiplexor.cpp
            st_rsa.cpp
            unknown.cpp
            url.cpp
            webDumpable.cpp
            neighbours.cpp
            ../lib/jsoncpp-0.5.0/src/lib_json/json_reader.cpp
            ../lib/jsoncpp-0.5.0/src/lib_json/json_value.cpp
            ../lib/jsoncpp-0.5.0/src/lib_json/json_writer.cpp
CHUNK_id.h
CLASS_id.h
CONTAINER.h
CapsId.h
DATA_id.h
DBH.cpp
DBH.h
DB_id.h
EVENT_id.h
ErrorDispatcherHelper.h
GlobalCookie_id.h
IConfigDB.h
IConfigObj.h
IGEOIP.h
IInstance.h
IObjectProxy.h
IProgress.h
IRPC.h
ISSL.h
IThreadNameController.h
IUtils.h
Integer.cpp
Integer.h
JAVACOOKIE_id.h
REF.h
REF_nm.h
RSA_id.h
Rational.cpp
Rational.h
Real.h
SEQ_id.h
SERVICE_id.h
SHA1_id.h
SOCKET_fd.h
SOCKET_id.h
URI.h
USER_id.h
VERSION_id.h
_QUERY.cpp
_QUERY.h
__crc16.cpp
__crc16.h
__crc32.cpp
__crc32.h
__crc64.cpp
__crc64.h
_bitStream.cpp
_bitStream.h
broadcaster.cpp
broadcaster.h
colorOutput.h
commonError.cpp
commonError.h
compat_win32.h
configDB.cpp
configDB.h
dfsErrors.h
e_poll.h
epoll_socket_info.cpp
epoll_socket_info.h
errorDispatcherCodes.h
eventDeque.cpp
eventDeque.h
event_mt.cpp
event_mt.h
evfilt_name.h
gTry.h
httpConnection.cpp
httpConnection.h
ifaces.h
ioBuffer.cpp
ioBuffer.h
js_utils.cpp
js_utils.h
jsonHandler.cpp
jsonHandler.h
linkinfo.h
listenerBase.cpp
listenerBase.h
listenerBuffered.cpp
listenerBuffered.h
listenerBuffered1Thread.cpp
listenerBuffered1Thread.h
listenerPolled.cpp
listenerPolled.h
listenerSimple.cpp
listenerSimple.h
logging.h
msockaddr_in.cpp
msockaddr_in.h
mtimespec.cpp
mtimespec.h
mutexInspector.cpp
mutexInspector.h
mutex_inspector_entry.h
mutexable.cpp
mutexable.h
neighbours.cpp
neighbours.h
networkMultiplexor.cpp
networkMultiplexor.h
objectHandler.cpp
objectHandler.h
pollable.h
queryResult.h
refstring.h
route_t.cpp
route_t.h
st_FILE.h
st_malloc.h
st_rsa.cpp
st_rsa.h
timerHelper.h
tools_mt.h
unknown.cpp
unknown.h
unknownCastDef.h
url.cpp
url.h
userObjectHandler.h
version_mega.h
webDumpable.cpp
webDumpable.h


           )
#install(TARGETS megatron-core DESTINATION ${LIB_TARGET_DIR})

