


add_library(megatron-core STATIC
    resplit.h
            DBH.cpp
            _QUERY.cpp
            __crc32.cpp
            __crc64.cpp
            __crc16.cpp
            _bitStream.cpp
            broadcaster.cpp
            commonError.cpp
            configDB.cpp
            epoll_socket_info.cpp
            event_mt.cpp
            eventDeque.cpp
            httpConnection.cpp
            ioBuffer.cpp
            js_utils.cpp
            listenerBase.cpp
            listenerBuffered1Thread.cpp
            listenerPolled.cpp
            listenerSimple.cpp
            msockaddr_in.cpp
            mtimespec.cpp
            mutexInspector.cpp
            mutexable.cpp
            objectHandler.cpp
            route_t.cpp
	    networkMultiplexor.cpp
            st_rsa.cpp
            unknown.cpp
            webDumpable.cpp
            neighbours.cpp
CONTAINER.h
CapsId.h
DBH.cpp
DBH.h
EVENT_id.h
ErrorDispatcherHelper.h
GlobalCookie_id.h
IConfigDB.h
IConfigObj.h
IGEOIP.h
IInstance.h
IObjectProxy.h
IRPC.h
ISSL.h
IThreadNameController.h
IUtils.h
REF.h
REF_nm.h
RSA_id.h
Real.h
SERVICE_id.h
SHA1_id.h
SOCKET_fd.h
SOCKET_id.h
VERSION_id.h
_QUERY.cpp
_QUERY.h
__crc16.cpp
__crc16.h
__crc32.cpp
__crc32.h
__crc64.cpp
__crc64.h
_bitStream.cpp
_bitStream.h
broadcaster.cpp
broadcaster.h
colorOutput.h
commonError.cpp
commonError.h
compat_win32.h
configDB.cpp
configDB.h
e_poll.h
epoll_socket_info.cpp
epoll_socket_info.h
errorDispatcherCodes.h
eventDeque.cpp
eventDeque.h
event_mt.cpp
event_mt.h
httpConnection.cpp
httpConnection.h
ioBuffer.cpp
ioBuffer.h
js_utils.cpp
js_utils.h
linkinfo.h
listenerBase.cpp
listenerBase.h
listenerBuffered1Thread.cpp
listenerBuffered1Thread.h
listenerPolled.cpp
listenerPolled.h
listenerSimple.cpp
listenerSimple.h
logging.h
msockaddr_in.cpp
msockaddr_in.h
mtimespec.cpp
mtimespec.h
mutexInspector.cpp
mutexInspector.h
mutex_inspector_entry.h
mutexable.cpp
mutexable.h
neighbours.cpp
neighbours.h
networkMultiplexor.cpp
networkMultiplexor.h
objectHandler.cpp
objectHandler.h
pollable.h
queryResult.h
refstring.h
route_t.cpp
route_t.h
st_FILE.h
st_malloc.h
st_rsa.cpp
st_rsa.h
timerHelper.h
tools_mt.h
unknown.cpp
unknown.h
userObjectHandler.h
version_mega.h
webDumpable.cpp
webDumpable.h
splitStr.h
url.cpp
url.hpp
refstring.cpp
backtrace.cpp
listenerBufferedNThread.cpp
listenerBufferedNThread.h
#malloc_debug.cpp
#malloc_debug.h
obuf.cpp
get_symbol_name.cpp
           )

