#cmake_minimum_required (VERSION 2.6)




add_library(megatron-main STATIC
CInstance.cpp
CInstance.h
CUtils.cpp
CUtils.h
configObj.cpp
configObj.h
iutils_decl.cpp
megatron.cpp
megatron.h
megatronClient.cpp
megatronClient.h
threadNameCtl.cpp
threadNameCtl.h
utils_local.h

CInstance.cpp
CUtils.cpp
configObj.cpp
megatron.cpp
threadNameCtl.cpp
megatronClient.cpp
iutils_decl.cpp

)

